# stox

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  WORKSPACE  cloudbuild.yaml  deps.bzl  go.mod  go.sum  stox.go  stox_test.go  terraform.tfstate
.github/workflows/: main.yml
bazel/: goa.bzl
cloudbuild/: deploy_infra.yaml  publish_images.yaml  unit_tests.yaml
cmd/server/: BUILD.bazel  http.go  main.go
cmd/server-cli/: BUILD.bazel  http.go  main.go
design/: BUILD.bazel  design.go  types.go
errors/: BUILD.bazel  errors.go
terraform/: .terraform.lock.hcl  main.tf
utils/: BUILD.bazel
