###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "stox",
    version = "1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")

# If the Gazelle plugin is needed:
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.5.0", dev_dependency = True)

bazel_dep(name = "rules_go", version = "0.43.0", repo_name = "io_bazel_rules_go")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

bazel_dep(name = "gazelle", version = "0.34.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_alpacahq_alpaca_trade_api_go_v3", "com_github_google_go_cmp", "com_github_polygon_io_client_go", "com_github_rs_zerolog", "design_goa_goa_v3", "design_goa_plugins_v3", "org_golang_google_protobuf")
