load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = [
        "http.go",
        "main.go",
    ],
    importpath = "github.com/t-hale/stox/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//:stox",
        "//gen/http/stox/server",
        "//gen/log",
        "//gen/stox",
        "@design_goa_goa_v3//http",
        "@design_goa_goa_v3//http/middleware",
        "@design_goa_goa_v3//middleware",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
